# dirt-finder

./: .gitignore  PLAN.md  README.md  pyproject.toml
configs/: hangzhou.toml
scripts/: README.md  download_merge_gscloud_dem.sh
src/dirt_finder/: __init__.py  analysis.py  cli.py  config.py  fetch.py  render.py
tests/: test_analysis.py  test_config.py  test_fetch.py  test_live_smoke.py
