[project]
name = "dirt-finder"
version = "0.1.0"
description = "CLI pipeline for finding candidate dirt-bike park sites near Hangzhou."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "earthaccess>=0.14.0",
  "folium>=0.19.0",
  "geopandas>=1.0.0",
  "networkx>=3.4.0",
  "numpy>=2.1.0",
  "osmnx>=2.0.0",
  "pandas>=2.2.0",
  "pydantic>=2.10.0",
  "pyproj>=3.7.0",
  "rasterio>=1.4.0",
  "rich>=13.9.0",
  "shapely>=2.0.0",
  "typer>=0.15.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
dirt-finder = "dirt_finder.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
